# pathfinding-bench

./: .gitignore  CMakeLists.txt  README.md  README_cost2go.md  config.py  generate_custom_maps.py  new_benchmark.txt  old_benchmark.txt  readme.md  requirements.txt  setup.sh
data/map/my_random/: random1024-25.map  random1024-35.map
data/scen/my_random/: random1024-25-custom.map.scen  random1024-35.map.scen
results/: benchmark_results.csv
results/maze/: results_maze_20260208_094543.csv
results/maze/first_10/: res_maze_20260208_104328.csv  res_maze_20260209_143351.csv
results/maze/single_map_tests/: res_maze_maze512-1-0.map_20260208_115823.csv  res_maze_maze512-1-0.map_20260209_195252.csv  res_maze_maze512-1-0.map_20260209_195252_report.txt  res_maze_maze512-1-0.map_20260210_002242.csv  res_maze_maze512-1-0.map_20260210_002242_report.txt  (+6 more)
results/my/: results_my_20260208_094543.csv  results_my_20260208_100111.csv
results/test_gpu/: count_1000__radius_10  random1024-25_count2000_radius10
scripts/: analyze_old.py  analyze_results.py  bench_c2g.py  benchmark_tester.py  bfs.py  collect_metrics.py  config.py  create_report.py  gpu_planner.py  main.py  map_parser.py  run_custom_scenarios.py  run_experiments.py  run_visual.py  visualizer.py
scripts/commands/: bench_c2g.py  benchmark_tester.py  run_experiments.py  run_visual.py
scripts/core/: map_parser.py  visualizer.py
scripts/gpu/: gpu_planner.py
src/: PathPlanner.cpp  PathPlanner.h  bindings.cpp
src/include/: PathPlanner.h
tests/: test_core.py
trash/: new_benchmark_all.txt  old_benchmark_all.txt
(+34 files in other folders)
